# ChangeLog for sys-apps/hal
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.69 2006/01/02 16:54:37 hansmi Exp $

  02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> hal-0.4.8.ebuild:
  Stable on ppc.

  01 Jan 2006; <plasmaroo@gentoo.org> hal-0.4.8.ebuild:
  Stable on IA64.

  31 Dec 2005; Simon Stelling <blubb@gentoo.org> hal-0.4.8.ebuild:
  stable on amd64

  31 Dec 2005; Markus Rothe <corsair@gentoo.org> hal-0.4.8.ebuild:
  Stable on ppc64

  31 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> hal-0.4.7-r2.ebuild:
  Change /bin/false to -1 in enewuser call.

  30 Dec 2005; Saleem Abdulrasool <compnerd@gentoo.org> hal-0.4.8.ebuild:
  stable on x86

  30 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> files/0.5-hald.rc:
  Fix hal initscript so it can really start

*hal-0.5.5.1-r3 (29 Dec 2005)

  29 Dec 2005; Doug Goldstein <cardoe@gentoo.org>
  -files/hal-0.4.5-vat_ntfs_labels.patch, files/0.5-hald.rc,
  -files/hal-0.4.5-net_lockup.patch, -hal-0.5.5.1-r2.ebuild,
  +hal-0.5.5.1-r3.ebuild:
  Change initscript to handle possible permission problem. Make note about
  acpid in the ebuild.

  29 Dec 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  hal-0.5.5.1-r2.ebuild:
  Fixing KOBJECT_UEVENT check for 2.6.15 kernels.

  24 Dec 2005; Stefan Schweizer <genstef@gentoo.org> hal-0.5.5.1-r1.ebuild:
  Fix if-statement thanks to Michail A.Baikov <rusxakep@mail.ru> in bug 116376

  21 Dec 2005; Doug Goldstein <cardoe@gentoo.org> files/0.5-hald.rc,
  -hal-0.4.5-r2.ebuild, -hal-0.5.4.ebuild, -hal-0.5.5.1.ebuild,
  hal-0.5.5.1-r1.ebuild:
  ebuild clean ups

*hal-0.5.5.1-r1 (16 Dec 2005)

  16 Dec 2005; Spider <spider@gentoo.org>  hal-0.5.5.1-r1.ebuild,
  files/hal-0.5.5.1-RBC.patch:
  Adding the patch from 
  http://thread.gmane.org/gmane.comp.freedesktop.hal/3915 which unbreaks old 
  iPods (gen3 and below) on firewire.

  14 Dec 2005; Doug Goldstein <cardoe@gentoo.org> hal-0.4.8.ebuild,